Next.js Auth (Auth.js)

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydb?schema=public"
 NEXTAUTH_SECRET="This is an example"
+GOOGLE_ID = "154726647705-r8n0rsv196eismg51f1i1ruf89ca39ah.apps.googleusercontent.com"
+GOOGLE_SECRET = "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"
