--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@auth/prisma-adapter": "^1.0.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.2.0",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
